[metadata]
name = NanoImgPro
version = 0.2
author = Nicholas Ouassil
author_email = ouassil@berkeley.edu
description = Nanosensor Image Processor (NanoImgPro), a python-based image analysis tool for dopamine nanosensors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicholasOuassil/NanoImgPro
project_urls =
    Bug Tracker = https://github.com/NicholasOuassil/NanoImgPro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = NanoImgPro
packages = find:
python_requires = >=3.6

[options.packages.find]
where = NanoImgPro